@@ -8,21 +8,23 @@ import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.joget.apps.app.dao.AppDefinitionDao;
 import org.joget.apps.app.dao.FormDefinitionDao;
 import org.joget.apps.app.dao.PackageDefinitionDao;
+import org.joget.apps.app.service.AppService;
 import org.junit.After;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.transaction.annotation.Transactional;
 import static org.junit.Assert.*;
+import org.junit.Before;
 
 @RunWith(SpringJUnit4ClassRunner.class)
 @ContextConfiguration(locations = {"classpath:testAppsApplicationContext.xml"})
 public class TestAppDao {
 
     protected final String TEST_APP_ID = "awf_testApp";
-    protected final Long TEST_APP_VERSION = new Long(1);
+    protected final Long TEST_APP_VERSION = Long.valueOf(1);
     protected final String TEST_FORM_ID = "awf_testForm";
     protected final String TEST_PACKAGE_ID = "awf_testPackage";
-    protected final Long TEST_PACKAGE_VERSION = new Long(1);
+    protected final Long TEST_PACKAGE_VERSION = Long.valueOf(1);
     protected final String TEST_PROCESS_DEF_ID = "awf_testProcess";
     protected final String TEST_ACTIVITY_DEF_ID = "awf_testActivity";
     @Autowired
@@ -31,137 +33,135 @@ public class TestAppDao {
     private FormDefinitionDao formDefinitionDao;
     @Autowired
     private PackageDefinitionDao packageDefinitionDao;
+    @Autowired
+    private AppService appService;
 
     public TestAppDao() {
+    }
+    
+    @Before
+    public void makeSureDataIsClean() {
+        deleteAppDefinition(TEST_APP_ID);
+        TestAppService.cleanAppSrc(TEST_APP_ID);
     }
 
     @Test
     @Transactional
     public void testCreateAppDefinition() {
-        try {
-            // create app definition
-            AppDefinition appDef = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION);
+        AppDefinition checkDef = loadAppDefinition(TEST_APP_ID);
+        assertNull(checkDef);
 
-            // load and compare
-            AppDefinition loadedDef = loadAppDefinitionVersion(TEST_APP_ID, TEST_APP_VERSION);
-            assertTrue(appDef.getUid().equals(loadedDef.getUid()));
+        // create app definition
+        AppDefinition appDef = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION);
 
-            // search
-            Collection<AppDefinition> list = listAppDefinitions(TEST_APP_ID);
-            assertTrue(list.size() > 0);
+        // load and compare
+        AppDefinition loadedDef = loadAppDefinitionVersion(TEST_APP_ID, TEST_APP_VERSION);
+        assertTrue(appDef.getUid().equals(loadedDef.getUid()));
 
-        } finally {
-        }
+        // search
+        Collection<AppDefinition> list = listAppDefinitions(TEST_APP_ID);
+        assertTrue(!list.isEmpty());
+        
+        deleteAppDefinition(TEST_APP_ID);
     }
 
     @Test
     @Transactional
     public void testCreateFormDefinition() {
-        try {
-            // create app definition
-            AppDefinition appDef = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION);
+        // create app definition
+        AppDefinition appDef = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION);
 
-            // create form definition
-            FormDefinition formDef = createFormDefinition(TEST_FORM_ID, appDef);
+        // create form definition
+        FormDefinition formDef = createFormDefinition(TEST_FORM_ID, appDef);
 
-            // load and compare
-            FormDefinition loadedDef = loadFormDefinitionVersion(TEST_FORM_ID, appDef);
-            assertTrue(formDef.getId().equals(loadedDef.getId()));
+        // load and compare
+        FormDefinition loadedDef = loadFormDefinitionVersion(TEST_FORM_ID, appDef);
+        assertTrue(formDef.getId().equals(loadedDef.getId()));
 
-            // compare AppDefinition
-            AppDefinition formAppDef = loadedDef.getAppDefinition();
-            assertTrue(formAppDef.getUid().equals(appDef.getUid()));
-
-
-        } finally {
-        }
+        // compare AppDefinition
+        AppDefinition formAppDef = loadedDef.getAppDefinition();
+        assertTrue(formAppDef.getUid().equals(appDef.getUid()));
+        
+        deleteAppDefinition(TEST_APP_ID);
     }
 
     @Test
     @Transactional
     public void testAppVersions() {
-        try {
-            // create app versions
-            AppDefinition appDef1 = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION);
-            AppDefinition appDef2 = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION + 1);
-            AppDefinition appDef3 = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION + 2);
+        // create app versions
+        AppDefinition appDef1 = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION);
+        AppDefinition appDef2 = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION + 1);
+        AppDefinition appDef3 = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION + 2);
 
-            // list latest version
-            Collection<AppDefinition> list = listAppDefinitions(TEST_APP_ID);
-            assertTrue(list.size() == 1);
-            AppDefinition loadedDef = list.iterator().next();
-            assertTrue(appDef3.getVersion().equals(loadedDef.getVersion()));
+        // list latest version
+        Collection<AppDefinition> list = listAppDefinitions(TEST_APP_ID);
+        assertTrue(list.size() == 1);
+        AppDefinition loadedDef = list.iterator().next();
+        assertTrue(appDef3.getVersion().equals(loadedDef.getVersion()));
 
-            // check version count
-            Long versionCount = countAppDefinitionVersions(TEST_APP_ID);
-            assertTrue(versionCount == 3);
-
-        } finally {
-        }
+        // check version count
+        Long versionCount = countAppDefinitionVersions(TEST_APP_ID);
+        assertTrue(versionCount == 3);
+        
+        deleteAppDefinition(TEST_APP_ID);
     }
-
+    
     @Test
     @Transactional
     public void testPackageActivityFormMapping() {
-        try {
-            // create app definition
-            AppDefinition appDef = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION);
+        // create app definition
+        AppDefinition appDef = createAppDefinition(TEST_APP_ID, TEST_APP_VERSION+3);
 
-            // create form definition
-            FormDefinition formDef = createFormDefinition(TEST_FORM_ID, appDef);
+        // create form definition
+        FormDefinition formDef = createFormDefinition(TEST_FORM_ID, appDef);
 
-            // create package definition
-            PackageDefinition packageDef = createPackageDefinition(appDef, TEST_PACKAGE_ID, TEST_PACKAGE_VERSION);
+        // create package definition
+        PackageDefinition packageDef = createPackageDefinition(appDef, TEST_PACKAGE_ID, TEST_PACKAGE_VERSION);
 
-            // assign form and save
-            PackageActivityForm paf = new PackageActivityForm();
-            paf.setPackageDefinition(packageDef);
-            paf.setFormId(TEST_PACKAGE_ID);
-            paf.setProcessDefId(TEST_PROCESS_DEF_ID);
-            paf.setActivityDefId(TEST_ACTIVITY_DEF_ID);
-            packageDef.addPackageActivityForm(paf);
-            updatePackageDefinition(packageDef);
+        // assign form and save
+        PackageActivityForm paf = new PackageActivityForm();
+        paf.setPackageDefinition(packageDef);
+        paf.setFormId(TEST_PACKAGE_ID);
+        paf.setProcessDefId(TEST_PROCESS_DEF_ID);
+        paf.setActivityDefId(TEST_ACTIVITY_DEF_ID);
+        packageDef.addPackageActivityForm(paf);
+        updatePackageDefinition(packageDef);
+        
+        // load and verify
+        AppDefinition loadedAppDef = loadAppDefinitionVersion(TEST_APP_ID, TEST_APP_VERSION+3);
+        PackageDefinition loadedPackageDef = loadedAppDef.getPackageDefinition();
+        Map<String, PackageActivityForm> activityFormMap = loadedPackageDef.getPackageActivityFormMap();
+        String uid = paf.getUid();
+        PackageActivityForm loadedPaf = activityFormMap.get(uid);
+        assertTrue(paf.getFormId().equals(loadedPaf.getFormId()));
 
-            // load and verify
-            AppDefinition loadedAppDef = loadAppDefinitionVersion(TEST_APP_ID, TEST_APP_VERSION);
-            PackageDefinition loadedPackageDef = loadedAppDef.getPackageDefinition();
-            Map<String, PackageActivityForm> activityFormMap = loadedPackageDef.getPackageActivityFormMap();
-            String uid = paf.getUid();
-            PackageActivityForm loadedPaf = activityFormMap.get(uid);
-            assertTrue(paf.getFormId().equals(loadedPaf.getFormId()));
+        // update form
+        loadedPaf.setPackageDefinition(packageDef);
+        loadedPaf.setFormId(TEST_FORM_ID);
+        loadedPaf.setProcessDefId(TEST_PROCESS_DEF_ID);
+        loadedPaf.setActivityDefId(TEST_ACTIVITY_DEF_ID);
+        packageDef.addPackageActivityForm(loadedPaf);
+        updatePackageDefinition(packageDef);
 
-            // update form
-            loadedPaf.setPackageDefinition(packageDef);
-            loadedPaf.setFormId(TEST_FORM_ID);
-            loadedPaf.setProcessDefId(TEST_PROCESS_DEF_ID);
-            loadedPaf.setActivityDefId(TEST_ACTIVITY_DEF_ID);
-            packageDef.addPackageActivityForm(loadedPaf);
-            updatePackageDefinition(packageDef);
+        // reload and verify
+        loadedPackageDef = loadPackageDefinition(TEST_PACKAGE_ID);
+        activityFormMap = loadedPackageDef.getPackageActivityFormMap();
+        uid = paf.getUid();
+        loadedPaf = activityFormMap.get(uid);
+        assertTrue(TEST_FORM_ID.equals(loadedPaf.getFormId()));
 
-            // reload and verify
-            loadedPackageDef = loadPackageDefinition(TEST_PACKAGE_ID);
-            activityFormMap = loadedPackageDef.getPackageActivityFormMap();
-            uid = paf.getUid();
-            loadedPaf = activityFormMap.get(uid);
-            assertTrue(TEST_FORM_ID.equals(loadedPaf.getFormId()));
-
-            // remove mapping
-            loadedPackageDef = loadPackageDefinition(TEST_PACKAGE_ID);
-            loadedPackageDef.removePackageActivityForm(TEST_PROCESS_DEF_ID, TEST_ACTIVITY_DEF_ID);
-            updatePackageDefinition(loadedPackageDef);
-            loadedPackageDef = loadPackageDefinition(TEST_PACKAGE_ID);
-            activityFormMap = loadedPackageDef.getPackageActivityFormMap();
-            assertTrue(activityFormMap.isEmpty());
-
-        } finally {
-        }
+        // remove mapping
+        loadedPackageDef = loadPackageDefinition(TEST_PACKAGE_ID);
+        loadedPackageDef.removePackageActivityForm(TEST_PROCESS_DEF_ID, TEST_ACTIVITY_DEF_ID);
+        updatePackageDefinition(loadedPackageDef);
+        loadedPackageDef = loadPackageDefinition(TEST_PACKAGE_ID);
+        activityFormMap = loadedPackageDef.getPackageActivityFormMap();
+        assertTrue(activityFormMap.isEmpty());
     }
 
     @Test
     @Transactional
     public void deleteAppDefinition() {
-        testPackageActivityFormMapping();
-
         // delete app
         deleteAppDefinition(TEST_APP_ID);
 
@@ -192,16 +192,16 @@ public class TestAppDao {
         // save test app
         appDefinitionDao.saveOrUpdate(appDef);
 
-        return appDef;
+        return loadAppDefinitionVersion(id, version);
     }
 
     protected AppDefinition loadAppDefinitionVersion(String id, Long version) {
-        AppDefinition appDef = appDefinitionDao.loadVersion(id, version);
+        AppDefinition appDef = appService.loadAppDefinition(id, version.toString());
         return appDef;
     }
 
     protected AppDefinition loadAppDefinition(String id) {
-        AppDefinition appDef = appDefinitionDao.loadById(id);
+        AppDefinition appDef = appService.loadAppDefinition(id, null);
         return appDef;
     }
 
@@ -211,11 +211,8 @@ public class TestAppDao {
     }
 
     protected Collection<AppDefinition> listAppDefinitions(String id) {
-        // get substring to search for
-        String nameFilter = id.substring(0, id.length() - 2);
-
         // query dao
-        Collection<AppDefinition> resultList = appDefinitionDao.findLatestVersions(id, null, nameFilter, null, null, null, null);
+        Collection<AppDefinition> resultList = appDefinitionDao.findLatestVersions(null, id, null, null, null, null, null);
         return resultList;
     }
 
@@ -284,8 +281,8 @@ public class TestAppDao {
 
         // save test package
         packageDefinitionDao.saveOrUpdate(packageDef);
-
-        return packageDef;
+        
+        return packageDefinitionDao.loadAppPackageDefinition(appDef.getAppId(), appDef.getVersion());
     }
 
     protected PackageDefinition updatePackageDefinition(PackageDefinition packageDef) {
